tests/integration/snapshots/integration_tests__integration__snapshot_tests__dry_run_with_args.snap
---
source: tests/integration/snapshot_tests.rs
expression: stdout
---
Would run: npm run test -- --watch --coverage
