tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_invalid_runner.snap
---
source: tests/integration/snapshot_tests.rs
expression: stderr
---
error: invalid value 'invalid' for '--runner <RUNNER>'
  [possible values: npm, yarn, pnpm, bun]

For more information, try '--help'.
