tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_no_history.snap
---
source: tests/integration/snapshot_tests.rs
expression: stderr
---
Error: No previous script found for this project. Run nrs first to execute a script.
