tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_no_package_json.snap
---
source: tests/integration/snapshot_tests.rs
expression: normalized
---
Error: No package.json found in <TEMP_PATH> or any parent directory (searched up to 10 levels)
