tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_script_not_found.snap
---
source: tests/integration/snapshot_tests.rs
expression: stderr
---
Error: Script 'nonexistent' not found in package.json

Available scripts:
  build
  dev
  format
  lint
  test
