tests/integration/snapshots/integration_tests__integration__snapshot_tests__error_script_not_found_suggestion.snap
---
source: tests/integration/snapshot_tests.rs
expression: stderr
---
Error: Script 'devv' not found

Did you mean: 'dev', 'test'?

Run 'nrs --list' to see all available scripts.

Available scripts:
  build
  dev
  format
  lint
  test
