tests/integration/snapshots/integration_tests__integration__snapshot_tests__help_output.snap
---
source: tests/integration/snapshot_tests.rs
expression: stdout
---
Fast interactive TUI for running npm scripts

Usage: nrs [OPTIONS] [PATH]

Arguments:
  [PATH]
          Path to project directory (default: current directory)

Options:
  -L, --last
          Rerun last executed script (no TUI)

  -l, --list
          List scripts non-interactively (no TUI)

  -e, --exclude <PATTERN>
          Exclude scripts matching pattern (can be repeated)

  -s, --sort <MODE>
          Initial sort mode

          Possible values:
          - recent:   Sort by most recently used
          - alpha:    Sort alphabetically
          - category: Group by category/prefix

  -r, --runner <RUNNER>
          Override package manager
          
          [possible values: npm, yarn, pnpm, bun]

  -a, --args <ARGS>
          Arguments to pass to the selected script

  -n, --script <NAME>
          Run script directly without TUI

  -d, --dry-run
          Show command without executing

  -c, --config <PATH>
          Path to config file

      --no-config
          Ignore config files

      --debug
          Enable debug output

      --completions <SHELL>
          Generate shell completions

          Possible values:
          - bash:       Bash shell
          - zsh:        Zsh shell
          - fish:       Fish shell
          - powershell: PowerShell
          - elvish:     Elvish shell

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
