tests/integration/snapshots/integration_tests__integration__snapshot_tests__list_basic.snap
---
source: tests/integration/snapshot_tests.rs
expression: normalized
---
Available scripts (npm):

  build   vite build
  dev     vite
  format  prettier --write .
  lint    eslint .
  test    vitest

5 scripts found
